k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatwoot-loadbalancer
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chatwoot-rails  # This should match your main application's label
